Fix display on mobile to be 100% of screen width (was 50%). Fix resume page navbar to collapse on click. Fix bulleted text display so wraps on mobile. Hide bottom <hr> line when home page shrinks to display mobile menu.

--- a/home/css/responsive.css
+++ b/home/css/responsive.css
@@ -5,6 +5,11 @@
     }
 }
 
+@media screen and (max-width: 990px) {
+  img.img-responsive.center-block  {
+    margin-top: 5%;
+  }
+}
 
 /*below 550*/
 @media screen and (max-width: 550px) {
@@ -17,6 +22,10 @@
         border-top: 18px double #bcbbbb;
         border-bottom: 6px solid #bcbbbb;
     }
+
+    .main-container-hr {
+        display: none;
+      }
 
     .nav {
         /*keeps ontop when moves offscreen*/
@@ -67,7 +76,7 @@
         margin-left: 5em;
         width: 0.5em;
     }
-    
+
     .navicon {
         height: 30px;
         width: 34px;
