--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -119,11 +119,8 @@ ul {
   padding-bottom: 10px;
 }
 
-@media screen and (max-width: 990px) {
-  img.img-responsive.center-block  {
-    margin-top: 5%;
-  }
-}
+
+
 /*CONTACT FORM*/
 
 /*@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);*/
